--- a/frontend/src/components/common/Button.css
+++ b/frontend/src/components/common/Button.css
@@ -24,6 +24,7 @@
 
 .btn-primary:hover:not(:disabled) {
   background: #1d4ed8;
+  color: white;
 }
 
 .btn-secondary {
@@ -44,6 +45,7 @@
 
 .btn-danger:hover:not(:disabled) {
   background: #dc2626;
+  color: white;
 }
 
 .btn-outline {
